Apply demo bleed fix to all demos

--- a/css/styles.css
+++ b/css/styles.css
@@ -87,9 +87,11 @@ a:hover .icon {
 }
 
 .iframe-container {
-	background: black;
+    background: black;
 	overflow: hidden;
 	padding-top: 66.66%;
+    max-width: 960px;
+    max-height: 640px;
     margin: 0 auto;
 	position: relative;
 }
@@ -97,11 +99,9 @@ a:hover .icon {
 .iframe-container iframe {
     top: 0;
     left: 0;
-	border: 0;
+	width: 100%;
+	height: 100%;
 	position: absolute;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
 }
 
 .demo-wrapper {
@@ -109,6 +109,7 @@ a:hover .icon {
     height: 100%;
     max-height: 640px;
     max-width: 960px;
+    margin: 0 auto;
 }
 
 button.load {
